Update profile picture

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <table cellspacing=25>
 
     <tr>
-      <td><img src="/Users/sketdjoink/Desktop/Web Development/images/profile.png" alt="Profile Picture" height="200"></td>
+      <td><img src="profile.png" alt="Profile Picture" height="200"></td>
       <td>
         <h1>Sketdjo</h1>
         <p><strong>Architect & Illustrator</strong></p>
